--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "encoding": "^0.1.13",
     "firebase": "^9.23.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
